--- a/layers/roads-labels.yaml
+++ b/layers/roads-labels.yaml
@@ -9,17 +9,17 @@ layers:
 
         highway:
             filter: { kind: highway }
-            labels-highway-z8:
-                filter: { $zoom: { min: 8 }, $zoom: { max: 15 } }
-                draw:
-                    text:
-                        priority: 50
-                        text_source: ref
-                        font:
-                            family: Aldrich
-                            size: [[8,8px],[12,10px]]
-                            fill: [0.082,0.133,0.259]
-                            stroke: { color: [0.000,0.533,1.000], width: 4px }
+            # labels-highway-z8:
+            #     filter: { $zoom: { min: 8 }, $zoom: { max: 15 } }
+            #     draw:
+            #         text:
+            #             priority: 50
+            #             text_source: ref
+            #             font:
+            #                 family: Aldrich
+            #                 size: [[8,8px],[12,10px]]
+            #                 fill: [0.082,0.133,0.259]
+            #                 stroke: { color: [0.000,0.533,1.000], width: 4px }
             labels-highway-z14:
                 filter: { $zoom: { min: 15 } }
                 draw:
@@ -36,24 +36,24 @@ layers:
             filter: { kind: major_road }
             trunk_primary:
                 filter: { kind_detail: [trunk, primary] }
-                routes:
-                    filter: { ref: true }
-                    labels-trunk-primary-route:
-                        filter: { $zoom: { min: 13 } }
-                        draw:
-                            text:
-                                priority: 50
-                                text_source: global.ux_language_text_source
-                                font:
-                                    family: Aldrich
-                                    size: [[13,10px],[15,12px],[19,14px]]
-                                    fill: [0.027,0.805,0.939]
-                                    stroke: { color: [0.212,0.302,0.427], width: 5px }
+                # routes:
+                #     filter: { ref: true }
+                #     labels-trunk-primary-route:
+                #         filter: { $zoom: { min: 13 } }
+                #         draw:
+                #             text:
+                #                 priority: 50
+                #                 text_source: global.ux_language_text_source
+                #                 font:
+                #                     family: Aldrich
+                #                     size: [[13,10px],[15,12px],[19,14px]]
+                #                     fill: [0.027,0.805,0.939]
+                #                     stroke: { color: [0.212,0.302,0.427], width: 5px }
                 labels-trunk-primary-z14:
                     filter: { $zoom: [13,14] }
                     draw:
                         text:
-                            priority: 53
+                            priority: 51
                             text_source: global.ux_language_text_source
                             font:
                                 family: Cairo
@@ -64,7 +64,7 @@ layers:
                     filter: { $zoom: { min: 15 } }
                     draw:
                         text:
-                            priority: 53
+                            priority: 51
                             text_source: global.ux_language_text_source_road_ref_and_name_short
                             font:
                                 family: Cairo
@@ -77,7 +77,7 @@ layers:
                 labels-secondary:
                     draw:
                         text:
-                            priority: 54
+                            priority: 56
                             text_source: global.ux_language_text_source_road_ref_and_name_short
                             font:
                                 family: Cairo
@@ -94,7 +94,7 @@ layers:
                         draw:
                             text:
                                 #visible: true
-                                priority: 54
+                                priority: 56
                                 text_source: global.ux_language_text_source_road_ref_and_name_short
                                 font:
                                     family: Cairo
@@ -107,7 +107,7 @@ layers:
                     draw:
                         text:
                             visible: global.text_visible_roads
-                            priority: 55
+                            priority: 57
                             text_source: global.ux_language_text_source_road_ref_and_name_short
                             font:
                                 family: Cairo
@@ -125,7 +125,7 @@ layers:
                 draw:
                     text:
                         visible: global.text_visible_roads
-                        priority: 56
+                        priority: 59
                         text_source: name
                         font:
                             family: Cairo
@@ -155,7 +155,7 @@ layers:
                     - all:
                         - shield_text: false    # some roads don't have shield text, deal with that later
                         - ref: true
-                        - kind: [highway, major_road, minor_road]
+                        - kind: [motorway, trunk, primary, secondary, tertiary]
             # default
             draw:
                 icons:
@@ -169,12 +169,22 @@ layers:
                             }
                         }
                     sprite_default: generic_shield_5char
-                    priority: 20
-                    # the size needs to match the sprite_generic asset dimensions
-                    size: [[6,[24px,14px]],[13,[26px,15px]],[15,[32px,18px]]]
+                    priority: 58
+                    repeat_group: shields
+                    repeat_distance: 30px
+                    placement: midpoint
+                    placement_min_length_ratio:
+                        - [8, 0.1]
+                        - [9, 0.25]
+                        - [10, 0.25]
+                        - [11, 0.15]
+                        - [12, 1]
+                        - [13, 1.50]
+                        - [14, 2.0]
                     cull_from_tile: true
-                    visible: global.text_visible_shields
+                    visible: false
                     text:
+                        repeat_distance: 200px
                         anchor: center
                         text_source: |
                             function() { 
@@ -186,15 +196,66 @@ layers:
                             }
                         font:
                             family: Aldrich
-                            fill: [0.208,0.812,0.922]
+                            fill: [0.413,0.933,0.960]
                             size: [[7,7px],[12,8px],[16,9px]]
-            not-special:
-                filter:
-                    not: { network: ['US:I','US:US'] }
-                    $zoom: { max: 9 }
+            default_priority_highway:
+                filter: 
+                    all:
+                        - kind_detail: motorway
+                        - $zoom: { min: 9 }
                 draw:
                     icons:
-                        visible: false
+                        priority: 47
+                        #color: yellow
+                        visible: global.text_visible_shields
+
+            default_priority_trunk:
+                filter: 
+                    all:
+                        - kind_detail: [trunk]
+                        - $zoom: { min: 10 }
+                draw:
+                    icons:
+                        priority: 48
+                        #color: red
+                        visible: global.text_visible_shields
+            default_priority_primary:
+                filter: 
+                    all:
+                        - kind_detail: [primary]
+                        - $zoom: { min: 12 }
+                draw:
+                    icons:
+                        priority: 49
+                        #color: aqua
+                        visible: global.text_visible_shields
+            default_priority_trunk_secondary:
+                filter:
+                    all:
+                        - kind_detail: [secondary]
+                        - $zoom: { min: 12 }
+                draw:
+                    icons:
+                        priority: 53
+                        #color: blue
+                        visible: global.text_visible_shields
+            default_priority_trunk_tertiary:
+                filter:
+                    all:
+                        - kind_detail: tertiary
+                        - $zoom: { min: 13 }
+                draw:
+                    icons:
+                        priority: 55
+                        #color: green
+                        visible: global.text_visible_shields
+            # not-special:
+            #     filter:
+            #         not: { network: ['US:I','US:US'] }
+            #         $zoom: { max: 9 }
+            #     draw:
+            #         icons:
+            #             visible: false
             width_1char:
                 filter: |
                     function() { 
@@ -291,7 +352,8 @@ layers:
                         icons:
                             # you need to match any custom shield to the vector tile `network` values
                             sprite: function() { return (feature.network + '_' + feature.shield_text.length + 'char'); }
-                            priority: 16
+                            priority: 46
+                            visible: global.text_visible_shields
                             text:
                                 offset: [0px, 0px]
                                 font:
@@ -326,22 +388,24 @@ layers:
                 US-US:
                     filter:
                         network: ['US:US','US:US:Business', 'US:US:Truck', 'US:US:Alternate']
+                        $zoom: { min: 7 }
                     draw:
                         icons:
                             # you need to match any custom shield to the vector tile `network` values
                             sprite: |
                                 function() { return ('US:US_' + feature.shield_text.length + 'char'); }
-                            priority: 17
-                            size: [[8,19px],[13,23px],[15,27px]]
+                            priority: 47
+                            cull_from_tile: true
+                            visible: global.text_visible_shields
                             text:
                                 offset: [0.85px, 0px]
                                 font:
                                     fill: [1.00,1.00,1.00]
                                     size: [[7,8px],[12,9px],[16,10px]]
-                    early:
-                        filter: { $zoom: [7] }
-                        icons:
-                            visible: false
+                    # early:
+                    #     filter: { $zoom: [7] }
+                    #     icons:
+                    #         visible: false
                     width_1char:
                         filter: function() { return (feature.shield_text.length === 1) }
                         draw:
@@ -368,21 +432,21 @@ layers:
                             icons:
                                 size: [[6,[31px,18px]],[12,[35px,20px]],[16,[45px,25px]]]
                 # US State Routes
-                US-states:
-                    # Match state highways: `US:??`
-                    filter: |
-                        function() {
-                            return feature.shield_text &&
-                                /^US:(?!US)\w\w$/.test(feature.network)
-                        }
-                    draw:
-                        icons:
-                            # you need to match any custom shield to the vector tile `network` values
-                            priority: 18
-                    early:
-                        filter: { $zoom: [7,8,9] }
-                        icons:
-                            visible: false
+                # US-states:
+                #     # Match state highways: `US:??`
+                #     filter: |
+                #         function() {
+                #             return feature.shield_text &&
+                #                 /^US:(?!US)\w\w$/.test(feature.network)
+                #         }
+                #     draw:
+                #         icons:
+                #             # you need to match any custom shield to the vector tile `network` values
+                #             priority: 18
+                #     early:
+                #         filter: { $zoom: [7,8,9] }
+                #         icons:
+                #             visible: false
                 US-CA:
                     # Match California state highways: `US:CA`
                     filter: |
@@ -398,6 +462,21 @@ layers:
                                 font:
                                     fill: [1.00,1.00,1.00]
                                     size: [[7,7px],[13,9px],[15,10px]]
+                    motorway:
+                        filter: { kind_detail: [motorway], $zoom: [7,8] }
+                        draw:
+                            icons:
+                                visible: global.text_visible_shields
+                    trunk:
+                        filter: { kind_detail: [trunk], $zoom: [8,9] }
+                        draw:
+                            icons:
+                                visible: global.text_visible_shields
+                    primary:
+                        filter: { kind_detail: primary, $zoom: [10,11] }
+                        draw:
+                            icons:
+                                visible: global.text_visible_shields
                     width_1char:
                         filter: function() { return (feature.shield_text.length === 1) }
                         draw:
@@ -542,7 +621,8 @@ layers:
                         icons:
                             # you need to match any custom shield to the vector tile `network` values
                             sprite: function() { return ('county_shield_' + feature.shield_text.length + 'char'); }
-                            priority: 19
+                            # priority: 19
+                            visible: global.text_visible_shields
                             text:
                                 font:
                                     fill: [1.00,1.00,1.00]
