--- a/styles/points.yaml
+++ b/styles/points.yaml
@@ -37,7 +37,7 @@ textures:
             'US:US-5char': [782, 676, 182, 98]
             airport: [0, 76, 36, 36]
             aerodrome: [0, 76, 36, 36]
-            airport-xl: [908, 0, 72, 72]
+            airport-l: [908, 0, 72, 72]
             aquarium: [928, 236, 36, 36]
             atm: [136, 236, 36, 36]
             bakery: [752, 236, 36, 36]
@@ -182,7 +182,7 @@ textures:
             national_park: [434, 160, 36, 36]
             battlefield: [434, 160, 36, 36]
             protected_area: [434, 160, 36, 36]
-            park-xl: [354, 160, 72, 72]
+            park-l: [354, 160, 72, 72]
             parking: [890, 160, 36, 36]
             peak: [356, 118, 36, 36]
             pet: [358, 76, 36, 36]
@@ -246,7 +246,7 @@ textures:
             train_station: [472, 0, 36, 36]
             station: [472, 0, 36, 36]
             train: [472, 0, 36, 36]
-            train_station-xl: [392, 0, 72, 72]
+            train_station-l: [392, 0, 72, 72]
             ux-current-location: [588, 882, 88, 88]
             ux-locate-off: [922, 882, 72, 72]
             ux-locate-on: [842, 882, 72, 72]
