--- a/styles/points.yaml
+++ b/styles/points.yaml
@@ -10,31 +10,31 @@ textures:
         filtering: mipmap
         sprites:
             # define sprites: [x origin, y origin, width, height]
-            'US:CA-1char': [700, 676, 76, 86]
-            'US:CA-2char': [592, 676, 100, 92]
+            'US:CA-1char': [512, 768, 76, 86]
+            'US:CA-2char': [404, 768, 100, 92]
             'US:CA-3char': [340, 488, 120, 90]
             'US:CA-4char': [188, 488, 144, 90]
             'US:CA-5char': [0, 488, 180, 90]
-            'US:I-1char': [540, 780, 86, 96]
+            'US:I-1char': [368, 872, 86, 96]
             'US:I-2char': [140, 382, 102, 102]
             'US:I-3char': [0, 382, 134, 100]
             'US:I-4char': [714, 278, 168, 100]
             'US:I-5char': [528, 278, 178, 100]
-            'US:NY-1char': [766, 584, 72, 88]
-            'US:NY-2char': [670, 584, 88, 88]
-            'US:NY-3char': [530, 584, 132, 86]
-            'US:NY-4char': [370, 584, 152, 86]
-            'US:NY-5char': [182, 584, 180, 86]
-            'US:PA-1char': [98, 584, 76, 88]
-            'US:PA-2char': [-2, 584, 96, 88]
+            'US:NY-1char': [584, 676, 72, 88]
+            'US:NY-2char': [488, 676, 88, 88]
+            'US:NY-3char': [348, 676, 132, 86]
+            'US:NY-4char': [188, 676, 152, 86]
+            'US:NY-5char': [0, 676, 180, 86]
+            'US:PA-1char': [840, 584, 74, 88]
+            'US:PA-2char': [0, 584, 96, 88]
             'US:PA-3char': [818, 488, 134, 88]
             'US:PA-4char': [658, 488, 154, 88]
             'US:PA-5char': [468, 488, 182, 88]
-            'US:US-1char': [444, 780, 88, 96]
-            'US:US-2char': [316, 780, 122, 94]
-            'US:US-3char': [170, 780, 138, 96]
-            'US:US-4char': [0, 780, 164, 96]
-            'US:US-5char': [782, 676, 182, 98]
+            'US:US-1char': [272, 872, 88, 96]
+            'US:US-2char': [144, 872, 122, 94]
+            'US:US-3char': [0, 872, 138, 96]
+            'US:US-4char': [782, 768, 164, 96]
+            'US:US-5char': [594, 768, 182, 98]
             airport: [0, 76, 36, 36]
             aerodrome: [0, 76, 36, 36]
             airport-l: [908, 0, 72, 72]
@@ -69,11 +69,11 @@ textures:
             cafe: [708, 236, 36, 36]
             camp_site: [934, 118, 36, 36]
             summer_camp: [934, 118, 36, 36]
-            capital-l: [809, 780, 33, 33]
-            capital-m: [778, 780, 25, 25]
-            capital-s: [750, 780, 20, 20]
-            capital-xl: [898, 780, 41, 41]
-            capital-xs: [726, 780, 16, 16]
+            capital-l: [636, 872, 33, 33]
+            capital-m: [606, 872, 25, 25]
+            capital-s: [576, 874, 20, 20]
+            capital-xl: [726, 872, 41, 41]
+            capital-xs: [554, 874, 16, 16]
             car: [0, 236, 36, 36]
             car_repair: [222, 236, 36, 36]
             car_sharing: [644, 0, 36, 36]
@@ -127,12 +127,12 @@ textures:
             fuel: [134, 278, 36, 36]
             gallery: [840, 236, 36, 36]
             garden: [802, 118, 36, 36]
-            generic: [680, 780, 36, 36]
-            generic_shield-1char: [846, 584, 72, 72]
-            generic_shield-2char: [488, 676, 98, 72]
-            generic_shield-3char: [348, 676, 132, 72]
-            generic_shield-4char: [188, 676, 152, 72]
-            generic_shield-5char: [0, 676, 180, 72]
+            generic: [508, 872, 36, 36]
+            generic_shield-1char: [664, 676, 72, 72]
+            generic_shield-2char: [300, 768, 98, 72]
+            generic_shield-3char: [160, 768, 132, 72]
+            generic_shield-4char: [0, 768, 152, 72]
+            generic_shield-5char: [744, 676, 180, 72]
             gift: [218, 160, 36, 36]
             golf_course: [534, 118, 36, 36]
             government: [354, 236, 36, 36]
@@ -149,7 +149,7 @@ textures:
             motel: [776, 0, 36, 36]
             hostel: [776, 0, 36, 36]
             ice_cream: [484, 278, 36, 36]
-            information: [634, 780, 36, 36]
+            information: [462, 872, 36, 36]
             jewelry: [852, 76, 36, 36]
             jewish: [44, 0, 36, 36]
             landmark: [262, 0, 36, 36]
@@ -209,6 +209,11 @@ textures:
             archaeological_site: [558, 0, 36, 36]
             school: [670, 118, 36, 36]
             kindergarten: [670, 118, 36, 36]
+            sdk_shield-1char: [748, 584, 84, 84]
+            sdk_shield-2char: [628, 584, 112, 84]
+            sdk_shield-3char: [476, 584, 144, 84]
+            sdk_shield-4char: [300, 584, 168, 84]
+            sdk_shield-5char: [100, 584, 192, 84]
             shoemaker: [670, 76, 36, 36]
             ski: [568, 160, 36, 36]
             winter_sports: [568, 160, 36, 36]
@@ -231,31 +236,31 @@ textures:
             theme_park: [88, 160, 36, 36]
             amusement_ride: [88, 160, 36, 36]
             toilets: [978, 118, 36, 36]
-            townspot-l: [204, 884, 32, 32]
-            townspot-l-rev: [32, 882, 32, 32]
-            townspot-m: [172, 884, 24, 24]
-            townspot-m-rev: [0, 882, 24, 24]
-            townspot-s: [144, 884, 20, 20]
-            townspot-s-rev: [970, 780, 20, 20]
-            townspot-xl: [244, 884, 42, 42]
-            townspot-xl-rev: [72, 882, 38, 38]
-            townspot-xs: [120, 884, 16, 16]
-            townspot-xs-rev: [946, 780, 16, 16]
+            townspot-l: [30, 976, 32, 32]
+            townspot-l-rev: [860, 872, 32, 32]
+            townspot-m: [0, 976, 24, 24]
+            townspot-m-rev: [828, 872, 24, 24]
+            townspot-s: [972, 874, 20, 20]
+            townspot-s-rev: [798, 872, 20, 20]
+            townspot-xl: [72, 976, 42, 42]
+            townspot-xl-rev: [900, 872, 38, 38]
+            townspot-xs: [948, 874, 16, 16]
+            townspot-xs-rev: [774, 872, 16, 16]
             toys: [44, 76, 36, 36]
             traffic_signals: [90, 278, 36, 36]
             train_station: [472, 0, 36, 36]
             station: [472, 0, 36, 36]
             train: [472, 0, 36, 36]
             train_station-l: [392, 0, 72, 72]
-            ux-current-location: [588, 882, 88, 88]
-            ux-locate-off: [922, 882, 72, 72]
-            ux-locate-on: [842, 882, 72, 72]
-            ux-route-arrow: [294, 882, 128, 128]
-            ux-route-start: [508, 882, 72, 92]
-            ux-route-stop: [430, 882, 72, 92]
-            ux-search-active: [682, 882, 72, 108]
-            ux-search-inactive: [762, 882, 72, 108]
-            ux-transit-stop: [850, 782, 42, 36]
+            ux-current-location: [416, 974, 88, 88]
+            ux-locate-off: [750, 974, 72, 72]
+            ux-locate-on: [670, 974, 72, 72]
+            ux-route-arrow: [122, 974, 128, 128]
+            ux-route-start: [336, 974, 72, 92]
+            ux-route-stop: [258, 974, 72, 92]
+            ux-search-active: [510, 974, 72, 108]
+            ux-search-inactive: [590, 974, 72, 108]
+            ux-transit-stop: [678, 874, 42, 36]
             veterinary: [132, 0, 36, 36]
             viewpoint: [884, 236, 36, 36]
             vineyard: [266, 236, 36, 36]
